crates/toml/tests/snapshots/invalid/string/bad-uni-esc-ml-7.stderr
TOML parse error at line 1, column 28
  |
1 | bad-uni-esc-ml-7 = """\uabag"""
  |                            ^
too few unicode value digits, expected unicode hexadecimal value
